feat: add group sync handler
