# ground-control/internal/api/generated/models/group.go
@@ -1,0 +1,163 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Group group
+//
+// swagger:model Group
+type Group struct {
+
+	// created at
+	// Required: true
+	// Format: date-time
+	CreatedAt *strfmt.DateTime `json:"created_at"`
+
+	// group name
+	// Required: true
+	GroupName *string `json:"group_name"`
+
+	// id
+	// Required: true
+	ID *int32 `json:"id"`
+
+	// projects
+	// Required: true
+	Projects []string `json:"projects"`
+
+	// registry url
+	// Required: true
+	RegistryURL *string `json:"registry_url"`
+
+	// updated at
+	// Required: true
+	// Format: date-time
+	UpdatedAt *strfmt.DateTime `json:"updated_at"`
+}
+
+// Validate validates this group
+func (m *Group) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateCreatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateGroupName(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateID(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateProjects(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateRegistryURL(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateUpdatedAt(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Group) validateCreatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("created_at", "body", m.CreatedAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("created_at", "body", "date-time", m.CreatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Group) validateGroupName(formats strfmt.Registry) error {
+
+	if err := validate.Required("group_name", "body", m.GroupName); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Group) validateID(formats strfmt.Registry) error {
+
+	if err := validate.Required("id", "body", m.ID); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Group) validateProjects(formats strfmt.Registry) error {
+
+	if err := validate.Required("projects", "body", m.Projects); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Group) validateRegistryURL(formats strfmt.Registry) error {
+
+	if err := validate.Required("registry_url", "body", m.RegistryURL); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Group) validateUpdatedAt(formats strfmt.Registry) error {
+
+	if err := validate.Required("updated_at", "body", m.UpdatedAt); err != nil {
+		return err
+	}
+
+	if err := validate.FormatOf("updated_at", "body", "date-time", m.UpdatedAt.String(), formats); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this group based on context it is used
+func (m *Group) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Group) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Group) UnmarshalBinary(b []byte) error {
+	var res Group
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
