# ground-control/internal/api/generated/models/state_artifact.go
@@ -1,0 +1,133 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+import (
+	"context"
+	stderrors "errors"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// StateArtifact state artifact
+//
+// swagger:model StateArtifact
+type StateArtifact struct {
+
+	// artifacts
+	Artifacts []*Artifact `json:"artifacts"`
+
+	// group
+	Group string `json:"group,omitempty"`
+
+	// registry
+	Registry string `json:"registry,omitempty"`
+}
+
+// Validate validates this state artifact
+func (m *StateArtifact) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateArtifacts(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *StateArtifact) validateArtifacts(formats strfmt.Registry) error {
+	if swag.IsZero(m.Artifacts) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Artifacts); i++ {
+		if swag.IsZero(m.Artifacts[i]) { // not required
+			continue
+		}
+
+		if m.Artifacts[i] != nil {
+			if err := m.Artifacts[i].Validate(formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("artifacts" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("artifacts" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this state artifact based on the context it is used
+func (m *StateArtifact) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateArtifacts(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *StateArtifact) contextValidateArtifacts(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Artifacts); i++ {
+
+		if m.Artifacts[i] != nil {
+
+			if swag.IsZero(m.Artifacts[i]) { // not required
+				return nil
+			}
+
+			if err := m.Artifacts[i].ContextValidate(ctx, formats); err != nil {
+				ve := new(errors.Validation)
+				if stderrors.As(err, &ve) {
+					return ve.ValidateName("artifacts" + "." + strconv.Itoa(i))
+				}
+				ce := new(errors.CompositeError)
+				if stderrors.As(err, &ce) {
+					return ce.ValidateName("artifacts" + "." + strconv.Itoa(i))
+				}
+
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *StateArtifact) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *StateArtifact) UnmarshalBinary(b []byte) error {
+	var res StateArtifact
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
