# ground-control/internal/api/generated/restapi/operations/groups/sync_group_parameters.go
@@ -1,0 +1,83 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package groups
+
+import (
+	stderrors "errors"
+	"io"
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/validate"
+
+	"github.com/container-registry/harbor-satellite/ground-control/internal/api/generated/models"
+)
+
+// NewSyncGroupParams creates a new SyncGroupParams object
+//
+// There are no default values defined in the spec.
+func NewSyncGroupParams() SyncGroupParams {
+
+	return SyncGroupParams{}
+}
+
+// SyncGroupParams contains all the bound params for the sync group operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters syncGroup
+type SyncGroupParams struct {
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*
+	  Required: true
+	  In: body
+	*/
+	State *models.StateArtifact
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewSyncGroupParams() beforehand.
+func (o *SyncGroupParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	if runtime.HasBody(r) {
+		defer func() {
+			_ = r.Body.Close()
+		}()
+		var body models.StateArtifact
+		if err := route.Consumer.Consume(r.Body, &body); err != nil {
+			if stderrors.Is(err, io.EOF) {
+				res = append(res, errors.Required("state", "body", ""))
+			} else {
+				res = append(res, errors.NewParseError("state", "body", "", err))
+			}
+		} else {
+			// validate body object
+			if err := body.Validate(route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			ctx := validate.WithOperationRequest(r.Context())
+			if err := body.ContextValidate(ctx, route.Formats); err != nil {
+				res = append(res, err)
+			}
+
+			if len(res) == 0 {
+				o.State = &body
+			}
+		}
+	} else {
+		res = append(res, errors.Required("state", "body", ""))
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
