# ground-control/internal/api/generated/restapi/operations/groups/sync_group_responses.go
@@ -1,0 +1,236 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package groups
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/container-registry/harbor-satellite/ground-control/internal/api/generated/models"
+)
+
+// SyncGroupOKCode is the HTTP code returned for type SyncGroupOK
+const SyncGroupOKCode int = 200
+
+/*
+SyncGroupOK Group created and state synced
+
+swagger:response syncGroupOK
+*/
+type SyncGroupOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Group `json:"body,omitempty"`
+}
+
+// NewSyncGroupOK creates SyncGroupOK with default headers values
+func NewSyncGroupOK() *SyncGroupOK {
+
+	return &SyncGroupOK{}
+}
+
+// WithPayload adds the payload to the sync group o k response
+func (o *SyncGroupOK) WithPayload(payload *models.Group) *SyncGroupOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the sync group o k response
+func (o *SyncGroupOK) SetPayload(payload *models.Group) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SyncGroupOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// SyncGroupBadRequestCode is the HTTP code returned for type SyncGroupBadRequest
+const SyncGroupBadRequestCode int = 400
+
+/*
+SyncGroupBadRequest Invalid request body
+
+swagger:response syncGroupBadRequest
+*/
+type SyncGroupBadRequest struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewSyncGroupBadRequest creates SyncGroupBadRequest with default headers values
+func NewSyncGroupBadRequest() *SyncGroupBadRequest {
+
+	return &SyncGroupBadRequest{}
+}
+
+// WithPayload adds the payload to the sync group bad request response
+func (o *SyncGroupBadRequest) WithPayload(payload *models.ErrorResponse) *SyncGroupBadRequest {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the sync group bad request response
+func (o *SyncGroupBadRequest) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SyncGroupBadRequest) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(400)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// SyncGroupUnauthorizedCode is the HTTP code returned for type SyncGroupUnauthorized
+const SyncGroupUnauthorizedCode int = 401
+
+/*
+SyncGroupUnauthorized Unauthorized
+
+swagger:response syncGroupUnauthorized
+*/
+type SyncGroupUnauthorized struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewSyncGroupUnauthorized creates SyncGroupUnauthorized with default headers values
+func NewSyncGroupUnauthorized() *SyncGroupUnauthorized {
+
+	return &SyncGroupUnauthorized{}
+}
+
+// WithPayload adds the payload to the sync group unauthorized response
+func (o *SyncGroupUnauthorized) WithPayload(payload *models.ErrorResponse) *SyncGroupUnauthorized {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the sync group unauthorized response
+func (o *SyncGroupUnauthorized) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SyncGroupUnauthorized) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(401)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// SyncGroupInternalServerErrorCode is the HTTP code returned for type SyncGroupInternalServerError
+const SyncGroupInternalServerErrorCode int = 500
+
+/*
+SyncGroupInternalServerError Internal server error
+
+swagger:response syncGroupInternalServerError
+*/
+type SyncGroupInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewSyncGroupInternalServerError creates SyncGroupInternalServerError with default headers values
+func NewSyncGroupInternalServerError() *SyncGroupInternalServerError {
+
+	return &SyncGroupInternalServerError{}
+}
+
+// WithPayload adds the payload to the sync group internal server error response
+func (o *SyncGroupInternalServerError) WithPayload(payload *models.ErrorResponse) *SyncGroupInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the sync group internal server error response
+func (o *SyncGroupInternalServerError) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SyncGroupInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// SyncGroupBadGatewayCode is the HTTP code returned for type SyncGroupBadGateway
+const SyncGroupBadGatewayCode int = 502
+
+/*
+SyncGroupBadGateway Upstream Harbor error
+
+swagger:response syncGroupBadGateway
+*/
+type SyncGroupBadGateway struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.ErrorResponse `json:"body,omitempty"`
+}
+
+// NewSyncGroupBadGateway creates SyncGroupBadGateway with default headers values
+func NewSyncGroupBadGateway() *SyncGroupBadGateway {
+
+	return &SyncGroupBadGateway{}
+}
+
+// WithPayload adds the payload to the sync group bad gateway response
+func (o *SyncGroupBadGateway) WithPayload(payload *models.ErrorResponse) *SyncGroupBadGateway {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the sync group bad gateway response
+func (o *SyncGroupBadGateway) SetPayload(payload *models.ErrorResponse) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *SyncGroupBadGateway) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(502)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
